# kinput

./: Cargo.toml  LICENSE-APACHE  README.md  main.c
.github/workflows/: rust.yml
docs/: udev.md  uinput.md
src/: lib.rs  main.rs
src/core/: device.rs  keyboard.rs  mod.rs  mouse.rs  uinput.rs  worker.rs
src/core/devices/: absolute.rs  keyboard.rs  mod.rs  relative_mouse.rs
src/core/workers/: absolute.rs  keyboard.rs  mod.rs  relative_mouse.rs
src/core/wrappers/: absolute.rs  keyboard.rs  mod.rs  relative.rs
src/reader/: devices.rs  events.rs  mod.rs  reader.rs  signals.rs  structs.rs
src/types/: constants.rs  enums.rs  mod.rs  structs.rs
