[package]
name = "kinput"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alan-venv/kinput"
description = "Low-level Rust library for input injection on Linux"
keywords = ["lib", "utils", "input", "keyboard", "mouse"]

[dependencies]
libc = "0.2.180"
nix = { version = "0.30.1", features = ["ioctl", "poll", "signal"] }
